[project]
name = "ndastro-engine-docs"
version = "0.1.0"
description = ""
authors = [
    {name = "Jaganathan, B", email = "jaganathan.eswaran@gmail.com"}
]
maintainers = [
    {name = "Jaganathan, B", email = "jaganathan.eswaran@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<4.0"
keywords = ["ndastro engine", "products", "astronomy", "astrology", "chart calculation", "ephemeris", "transits", "aspects", "houses", "nakshatras", "yogas", "dashas", "divisional charts", "compatibility analysis", "remedies"]

[project.urls]
Homepage = "https://ndastro-engine.github.io"
Repository = "https://github.com/dhuruvah-apps/ndastro-engine.github.io"
Documentation = "https://ndastro-engine.dhuruvah.in/"
"Bug Tracker" = "https://github.com/dhuruvah-apps/ndastro-engine.github.io/issues"
Changelog = "https://github.com/dhuruvah-apps/ndastro-engine.github.io/releases"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.0",
    "pymdown-extensions>=10.20",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
namespace_packages = true
explicit_package_bases = true

[tool.ruff]
line-length = 150
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore=["INP001", "COM812", "D213", "D203"]

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["S101", "D103", "D100", "ANN201"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0


[tool.poetry.group.dev.dependencies]
mkdocs-material = "^9.7.1"
mkdocstrings = {extras = ["python"], version = "^1.0.0"}
pymdown-extensions = "^10.20"
commitizen = "4.11.0"
pre-commit = "^4.5.1"
mdx-include = ">=1.4.1,<2.0.0"
mkdocs-redirects = ">=1.2.1,<1.3.0"
pyyaml = ">=5.3.1,<7.0.0"
# For Material for MkDocs, Chinese search
# jieba==0.42.1
# For image processing by Material for MkDocs
# For image processing by Material for MkDocs
griffe-typingdoc = "0.3.0"
griffe-warnings-deprecated = "1.1.0"
# For griffe, it formats with black
mkdocs-macros-plugin = "1.4.1"
typer = "0.20.0"
ndastro-engine = "^0.8.1"

